Using ongoing notifications with progress bars for library refresh and ebook downloads. Fix url and error handling in ebook download.